<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.NestedScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ads="http://schemas.android.com/apk/res-auto"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="com.arkadiusz.dayscounter.Activities.AddActivity"
  tools:showIn="@layout/activity_add">


  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:padding="2dp">

      <EditText
        android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_activity_name_form"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:padding="2dp">

      <EditText
        android:id="@+id/date_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/add_activity_date_form"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:padding="2dp">

      <EditText
        android:id="@+id/description_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_activity_describe_form"
        android:maxLines="5"
        android:scrollbars="vertical"/>

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:orientation="horizontal">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_bell"/>

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.7"
        android:layout_marginLeft="2dp"
        android:layout_gravity="center_vertical"
        android:text="@string/add_reminder"
        android:textSize="14sp"/>

      <EditText
        android:id="@+id/reminder_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center_vertical"
        android:focusable="false"
        android:hint="@string/add_reminder_editText_hint"
        android:textSize="14sp"/>

      <TextView
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:text="@string/add_activity_clear_date"
        android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <EditText
      android:id="@+id/reminder_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="5dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:hint="@string/add_reminder_editText_notification"
      android:textSize="14sp"/>


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:orientation="horizontal">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_playback_repeat"/>

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="3dp"
        android:layout_gravity="center_vertical"
        android:text="@string/add_repeat"/>

      <Spinner
        android:id="@+id/spinner_repeat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
      android:id="@+id/adView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:layout_gravity="center"
      android:visibility="gone"
      ads:adSize="BANNER"
      ads:adUnitId="@string/banner_ad_unit_id_activity">
    </com.google.android.gms.ads.AdView>

    <Button
      android:id="@+id/add_button"
      android:layout_width="230dp"
      android:layout_height="40dp"
      android:layout_margin="30dp"
      android:layout_marginTop="20dp"
      android:layout_gravity="center"
      android:background="@drawable/button_background"
      android:fontFamily="sans-serif-medium"
      android:text="@string/add_activity_add_button"
      android:textColor="#ffffff"/>


  </LinearLayout>


</android.support.v4.widget.NestedScrollView>



